--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,14 @@ body {
     border-top: 2px solid gray;
     margin-top: 20px;
 }
+
+.hidden {
+  display: none;
+}
+
+.animate {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  vertical-align: top;
+  display: inline-block;
+}
